# polygon

./: CMakeLists.txt
hello_world/: CMakeLists.txt
include/polygon/algorithms/: insertion_sort.h
polygon/: CMakeLists.txt  main.cpp
polygon/algorithms/: CMakeLists.txt  insertion_sort.cpp
polygon/algorithms/test/: CMakeLists.txt  main.cpp
polygon/structures/: vector.cpp  vector.h
